--- a/_posts/2024-01-13-2024-reading-list.md
+++ b/_posts/2024-01-13-2024-reading-list.md
@@ -19,22 +19,22 @@ author: jeff
 I’m putting together a list of the things that I intend to read in 2024. Partially so that I can keep track of what I've read and so that I have a place to refer back to when I want to read something. I often find myself wanting to read articles or books or whitepapers and forgetting about them.
 
 ### Books
-- [ ] [Morning Star](https://en.wikipedia.org/wiki/Morning_Star_(Brown_novel)) by Pierce Brown\
-- [x] [Golden Son]()\
-- [ ] [Math from Three to Seven: The Story of a Mathematical Circle for Preschoolers]()\
-- [ ] [Grokking Algorithims]()\
-- [ ] [Bullshit Jobs]()\
-- [ ] [Designing Data Intensive Applications]()\
-- [ ] [Talking to My Daughter About the Economy]()\
-- [ ] [Writing picture books revised]()\
-- [x] [All Systems Red: The Murderbot Diaries]()\
-- [ ] [Recoding America]()
+-[ ] [Morning Star](https://en.wikipedia.org/wiki/Morning_Star_(Brown_novel)) by Pierce Brown
+-[x] [Golden Son]()
+-[ ] [Math from Three to Seven: The Story of a Mathematical Circle for Preschoolers]()
+-[ ] [Grokking Algorithims]()
+-[ ] [Bullshit Jobs]()
+-[ ] [Designing Data Intensive Applications]()
+-[ ] [Talking to My Daughter About the Economy]()
+-[ ] [Writing picture books revised]()
+-[x] [All Systems Red: The Murderbot Diaries]()
+-[ ] [Recoding America]()
 
 ### Whitepapers
-- [ ] [PNNL Whitepaper about new batteries](https://arxiv.org/abs/2401.04070Microsoft)
+-[ ] [PNNL Whitepaper about new batteries](https://arxiv.org/abs/2401.04070Microsoft)
 
 ### Articles
-- [x] [NVIDIA CEO: ‘This Year, Every Industry Will Become a Technology Industry’](https://blogs.nvidia.com/blog/nvidia-ceo-ai-drug-discovery-jp-morgan-healthcare-2024/)
+-[x] [NVIDIA CEO: ‘This Year, Every Industry Will Become a Technology Industry’](https://blogs.nvidia.com/blog/nvidia-ceo-ai-drug-discovery-jp-morgan-healthcare-2024/)
 
 
 
