removed the heavy check mark from articles. emoji's don't seem to work

--- a/_posts/2024-01-13-2024-reading-list.md
+++ b/_posts/2024-01-13-2024-reading-list.md
@@ -34,7 +34,7 @@ I’m putting together a list of the things that I intend to read in 2024. Parti
 -[ ] [PNNL Whitepaper about new batteries](https://arxiv.org/abs/2401.04070Microsoft)
 
 ### Articles
-:heavy_check_mark [NVIDIA CEO: ‘This Year, Every Industry Will Become a Technology Industry’](https://blogs.nvidia.com/blog/nvidia-ceo-ai-drug-discovery-jp-morgan-healthcare-2024/)
+-[x] [NVIDIA CEO: ‘This Year, Every Industry Will Become a Technology Industry’](https://blogs.nvidia.com/blog/nvidia-ceo-ai-drug-discovery-jp-morgan-healthcare-2024/)
 
 
 
