checked off talking to my daughter about the economy

--- a/_posts/2024-01-13-2024-reading-list.md
+++ b/_posts/2024-01-13-2024-reading-list.md
@@ -25,7 +25,7 @@ I’m putting together a list of the things that I intend to read in 2024. Parti
 - [ ] [Grokking Algorithims](https://www.amazon.com/Grokking-Algorithms-illustrated-programmers-curious/dp/1617292230)
 - [ ] [Bullshit Jobs]()
 - [ ] [Designing Data Intensive Applications]()
-- [ ] [Talking to My Daughter About the Economy]()
+- [x] [Talking to My Daughter About the Economy]()
 - [ ] [Writing Picture Books]()
 - [x] [All Systems Red: The Murderbot Diaries]()
 - [ ] [Recoding America]()
