--- a/_posts/2024-01-13-2024-reading-list.md
+++ b/_posts/2024-01-13-2024-reading-list.md
@@ -29,6 +29,7 @@ I’m putting together a list of the things that I intend to read in 2024. Parti
 - [ ] [Writing Picture Books]()
 - [x] [All Systems Red: The Murderbot Diaries]()
 - [ ] [Recoding America]()
+- [ ] [Uncommon Sense Teaching]()
 
 ### Whitepapers
 - [ ] [PNNL Whitepaper about new batteries](https://arxiv.org/abs/2401.04070Microsoft)
