Added books and an white paper

--- a/_posts/2024-01-13-2024-reading-list.md
+++ b/_posts/2024-01-13-2024-reading-list.md
@@ -30,9 +30,12 @@ I’m putting together a list of the things that I intend to read in 2024. Parti
 - [x] [All Systems Red: The Murderbot Diaries]()
 - [ ] [Recoding America]()
 - [ ] [Uncommon Sense Teaching]()
+- [ ] [Yellow Face]()
+- [ ] [The Poppy War]() 
 
 ### Whitepapers
 - [ ] [PNNL Whitepaper about new batteries](https://arxiv.org/abs/2401.04070Microsoft)
+- [ ] [Lumiere: Google Text to Video](https://arxiv.org/abs/2401.12945)
 
 ### Articles
  -[x] [NVIDIA CEO: ‘This Year, Every Industry Will Become a Technology Industry’](https://blogs.nvidia.com/blog/nvidia-ceo-ai-drug-discovery-jp-morgan-healthcare-2024/)
