added refactoring ui

--- a/_posts/2024-01-13-2024-reading-list.md
+++ b/_posts/2024-01-13-2024-reading-list.md
@@ -31,7 +31,8 @@ I’m putting together a list of the things that I intend to read in 2024. Parti
 - [ ] [Recoding America]()
 - [ ] [Uncommon Sense Teaching]()
 - [ ] [Yellow Face]()
-- [ ] [The Poppy War]() 
+- [ ] [The Poppy War](https://en.wikipedia.org/wiki/The_Poppy_War)
+- [ ] [Refactoring UI](https://www.refactoringui.com/)
 
 ### Whitepapers
 - [ ] [PNNL Whitepaper about new batteries](https://arxiv.org/abs/2401.04070Microsoft)
