added read book: fate of the jedi: outcast

--- a/_posts/2024-01-13-2024-reading-list.md
+++ b/_posts/2024-01-13-2024-reading-list.md
@@ -21,6 +21,7 @@ I’m putting together a list of the things that I intend to read in 2024. Parti
 ### Books
 - [x] [Morning Star](https://en.wikipedia.org/wiki/Morning_Star_(Brown_novel)) by Pierce Brown
 - [x] [Golden Son](https://en.wikipedia.org/wiki/Golden_Son) by Pierce Brown
+- [x] [Fate of the Jedi: Outcast](https://www.amazon.com/Outcast-Star-Wars-Fate-Jedi/dp/0345509072)
 - [ ] [Math from Three to Seven: The Story of a Mathematical Circle for Preschoolers]()
 - [ ] [Grokking Algorithims](https://www.amazon.com/Grokking-Algorithms-illustrated-programmers-curious/dp/1617292230)
 - [ ] [Bullshit Jobs]()
