--- a/_posts/2024-01-13-2024-reading-list.md
+++ b/_posts/2024-01-13-2024-reading-list.md
@@ -21,7 +21,7 @@ I’m putting together a list of the things that I intend to read in 2024. Parti
 ### Books
 - [x] [Morning Star](https://en.wikipedia.org/wiki/Morning_Star_(Brown_novel)) by Pierce Brown
 - [x] [Golden Son](https://en.wikipedia.org/wiki/Golden_Son) by Pierce Brown
-- [x] [Fate of the Jedi: Outcast](https://www.amazon.com/Outcast-Star-Wars-Fate-Jedi/dp/0345509072)
+- [x] [Fate of the Jedi: Outcast](https://www.amazon.com/Outcast-Star-Wars-Fate-Jedi/dp/0345509072) by Aaron Allston
 - [ ] [Math from Three to Seven: The Story of a Mathematical Circle for Preschoolers]()
 - [ ] [Grokking Algorithims](https://www.amazon.com/Grokking-Algorithms-illustrated-programmers-curious/dp/1617292230)
 - [ ] [Bullshit Jobs]()
@@ -36,11 +36,14 @@ I’m putting together a list of the things that I intend to read in 2024. Parti
 - [ ] [Refactoring UI](https://www.refactoringui.com/)
 
 ### Whitepapers
-- [ ] [PNNL Whitepaper about new batteries](https://arxiv.org/abs/2401.04070Microsoft)
+- [x] [PNNL Whitepaper about new batteries](https://arxiv.org/abs/2401.04070Microsoft)
 - [ ] [Lumiere: Google Text to Video](https://arxiv.org/abs/2401.12945)
-
+- [ ] [Websight White Paper](https://arxiv.org/abs/2403.09029)
 ### Articles
- -[x] [NVIDIA CEO: ‘This Year, Every Industry Will Become a Technology Industry’](https://blogs.nvidia.com/blog/nvidia-ceo-ai-drug-discovery-jp-morgan-healthcare-2024/)
+ - [x] [NVIDIA CEO: ‘This Year, Every Industry Will Become a Technology Industry’](https://blogs.nvidia.com/blog/nvidia-ceo-ai-drug-discovery-jp-morgan-healthcare-2024/)
+ - [ ] [Diffuser Prompt Enhancer](https://github.com/huggingface/diffusers/discussions/7321)
+ - [ ] [Websight Blog Post](https://huggingface.co/blog/websight)
+ 
 
 
 
