--- a/_posts/2024-01-13-2024-reading-list.md
+++ b/_posts/2024-01-13-2024-reading-list.md
@@ -34,15 +34,17 @@ I’m putting together a list of the things that I intend to read in 2024. Parti
 - [ ] [Yellow Face]()
 - [ ] [The Poppy War](https://en.wikipedia.org/wiki/The_Poppy_War)
 - [ ] [Refactoring UI](https://www.refactoringui.com/)
+- [ ] [A Programmer's Guide to Computer Science](https://www.amazon.com/Programmers-Guide-Computer-Science-self-taught/dp/195120400X)
 
 ### Whitepapers
 - [x] [PNNL Whitepaper about new batteries](https://arxiv.org/abs/2401.04070Microsoft)
 - [ ] [Lumiere: Google Text to Video](https://arxiv.org/abs/2401.12945)
-- [ ] [Websight White Paper](https://arxiv.org/abs/2403.09029)
+- [x] [Websight White Paper](https://arxiv.org/abs/2403.09029)
+- [ ] [Apple MM1 LLM](https://arxiv.org/abs/2403.09611)
 ### Articles
  - [x] [NVIDIA CEO: ‘This Year, Every Industry Will Become a Technology Industry’](https://blogs.nvidia.com/blog/nvidia-ceo-ai-drug-discovery-jp-morgan-healthcare-2024/)
  - [ ] [Diffuser Prompt Enhancer](https://github.com/huggingface/diffusers/discussions/7321)
- - [ ] [Websight Blog Post](https://huggingface.co/blog/websight)
+ - [x] [Websight Blog Post](https://huggingface.co/blog/websight)
  
 
 
