Added Fine Tuning Section

--- a/_posts/2024-01-13-2024-reading-list.md
+++ b/_posts/2024-01-13-2024-reading-list.md
@@ -46,6 +46,7 @@ I’m putting together a list of the things that I intend to read in 2024. Parti
  - [ ] [Diffuser Prompt Enhancer](https://github.com/huggingface/diffusers/discussions/7321)
  - [x] [Websight Blog Post](https://huggingface.co/blog/websight)
  
-
-
+### Fine-Tuning Resources
+- [ ] [MSFT LLM Fine-Tuning](https://learn.microsoft.com/en-us/training/modules/finetune-foundation-model-with-azure-machine-learning/?source=recommendations)
+- [ ] [Data Camp Fine Tuning](https://www.datacamp.com/tutorial/fine-tuning-large-language-models)
 
