added Netflix articles

--- a/_posts/2024-01-13-2024-reading-list.md
+++ b/_posts/2024-01-13-2024-reading-list.md
@@ -35,16 +35,23 @@ I’m putting together a list of the things that I intend to read in 2024. Parti
 - [ ] [The Poppy War](https://en.wikipedia.org/wiki/The_Poppy_War)
 - [ ] [Refactoring UI](https://www.refactoringui.com/)
 - [ ] [A Programmer's Guide to Computer Science](https://www.amazon.com/Programmers-Guide-Computer-Science-self-taught/dp/195120400X)
+- [ ] [AI 2041](https://www.amazon.com/AI-2041-Ten-Visions-Future/dp/0593238311/ref=asc_df_0593238311/?tag=hyprod-20&linkCode=df0&hvadid=693617400601&hvpos=&hvnetw=g&hvrand=4873485742954813674&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9011545&hvtargid=pla-2265659793504&psc=1&mcid=50f1d6a4c2523b439ce5ce675a8a3f9b&gad_source=1)
 
 ### Whitepapers
 - [x] [PNNL Whitepaper about new batteries](https://arxiv.org/abs/2401.04070Microsoft)
 - [ ] [Lumiere: Google Text to Video](https://arxiv.org/abs/2401.12945)
 - [x] [Websight White Paper](https://arxiv.org/abs/2403.09029)
 - [ ] [Apple MM1 LLM](https://arxiv.org/abs/2403.09611)
+
 ### Articles
  - [x] [NVIDIA CEO: ‘This Year, Every Industry Will Become a Technology Industry’](https://blogs.nvidia.com/blog/nvidia-ceo-ai-drug-discovery-jp-morgan-healthcare-2024/)
  - [ ] [Diffuser Prompt Enhancer](https://github.com/huggingface/diffusers/discussions/7321)
  - [x] [Websight Blog Post](https://huggingface.co/blog/websight)
+ - [x] [Crisis to Calm: A Story of Data Validation @ Netflix](https://www.infoq.com/presentations/data-validation-netflix/)
+ - [ ] [Data Mesh — A Data Movement and Processing Platform @ Netflix](https://netflixtechblog.com/data-mesh-a-data-movement-and-processing-platform-netflix-1288bcab2873)
+ - [ ] [Streaming SQL in Data Mesh](https://netflixtechblog.com/streaming-sql-in-data-mesh-0d83f5a00d08)
+ - [ ] [Navigating the Netflix Data Deluge: The Imperative of Effective Data Management](https://netflixtechblog.medium.com/navigating-the-netflix-data-deluge-the-imperative-of-effective-data-management-e39af70f81f7)
+ - [ ] [Netflix Data Summit](https://www.youtube.com/playlist?list=PLSECvWLlUYeF06QK5FOOELvgKdap3cQf0)
  
 ### Fine-Tuning Resources
 - [ ] [MSFT LLM Fine-Tuning](https://learn.microsoft.com/en-us/training/modules/finetune-foundation-model-with-azure-machine-learning/?source=recommendations)
