--- a/_posts/2024-01-13-2024-reading-list.md
+++ b/_posts/2024-01-13-2024-reading-list.md
@@ -30,7 +30,7 @@ I’m putting together a list of the things that I intend to read in 2024. Parti
 - [ ] [Bullshit Jobs]()
 - [ ] [Designing Data Intensive Applications]()
 - [x] [Talking to My Daughter About the Economy]()
-- [ ] [Writing Picture Books]()
+- [x] [Writing Picture Books]()
 - [x] [All Systems Red: The Murderbot Diaries]()
 - [x] [Recoding America]()
 - [ ] [Uncommon Sense Teaching]()
@@ -39,8 +39,9 @@ I’m putting together a list of the things that I intend to read in 2024. Parti
 - [ ] [Refactoring UI](https://www.refactoringui.com/)
 - [ ] [A Programmer's Guide to Computer Science](https://www.amazon.com/Programmers-Guide-Computer-Science-self-taught/dp/195120400X)
 - [x] [AI 2041](https://www.amazon.com/AI-2041-Ten-Visions-Future/dp/0593238311/ref=asc_df_0593238311/?tag=hyprod-20&linkCode=df0&hvadid=693617400601&hvpos=&hvnetw=g&hvrand=4873485742954813674&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9011545&hvtargid=pla-2265659793504&psc=1&mcid=50f1d6a4c2523b439ce5ce675a8a3f9b&gad_source=1)
-- [x] Empire of Silence
-- [x] So Good They Can't Ignore You
+- [x] Empire of Silence by Christopher Ruocchio
+- [x] So Good They Can't Ignore You by Cal Newport | Audiobook
+- [x] [What Do You Care What Other People Think]() by Richard Feynman | Audiobook
 
 ### Whitepapers
 - [x] [PNNL Whitepaper about new batteries](https://arxiv.org/abs/2401.04070Microsoft)
