Updated book list

--- a/_posts/2024-12-29-2025-reading-list.md
+++ b/_posts/2024-12-29-2025-reading-list.md
@@ -1,7 +1,7 @@
 ---
 date: 2024-12-29 23:54:40
 layout: post
-title: 2024 Reading List
+title: 2025 Reading List
 subtitle: My reading list for 2025.
 description: This is my reading list.
 image: https://images.pexels.com/photos/159711/books-bookstore-book-reading-159711.jpeg
@@ -27,6 +27,8 @@ I’m putting together a list of the things that I intend to read in 2025. Parti
 - [ ] [A Programmer's Guide to Computer Science](https://www.amazon.com/Programmers-Guide-Computer-Science-self-taught/dp/195120400X)
 - [ ] [Howling Dark by Christopher Ruocchio]()
 - [ ] [Getting Things Done by David Allen]()
+- [x] [Shift by Hugh Howie]()
+- [ ] [Databricks Lakehouse Platform Cookbook by Dr. Alan L. Dennis]()
 
 ### Whitepapers
 
